changing default logo

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     />
 -->
     <!-- Twitter -->
+   <!--
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
@@ -43,24 +44,24 @@
       property="twitter:image"
       content="https://user-images.githubusercontent.com/62628408/150613011-b78a7f5a-0af1-4312-aab0-0022e7258693.png"
     />
-
+-->
     <!-- Link -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/favicon/apple-touch-icon.png"
+      href="/assets/lobe_ravioli-min.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/assets/favicon/favicon-16x16.png"
+      href="/assets/lobe_ravioli-min.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/favicon/favicon-32x32.png"
+      href="/assets/lobe_ravioli-min.png"
     />
     <link
       rel="icon"
@@ -72,10 +73,9 @@
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="assets/favicon/android-chrome-512x512.png"
+      href="/assets/lobe_ravioli-min.png"
     />
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico" />
-    <link rel="manifest" href="assets/favicon/site.webmanifest" />
+    <link rel="icon" type="image/x-icon" href="/assets/lobe_ravioli-min.png" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -92,9 +92,7 @@
         <div class="container">
           <!-- Logo -->
           <h1 id="logo">
-            <a href="https://github.com/CommunityPro/portfolio-html"
-              ><img src="./assets/logo.png" alt="Your Logo"
-            /></a>
+            <a href="https://github.com/LobsterRavioli"><img src="assets/lobe_ravioli-min.png" alt="HTML tutorial" style="width:42px;height:42px;"></a>
           </h1>
           <!-- Navbar links -->
           <ul class="nav-menu">
@@ -130,7 +128,7 @@
       <section class="header-container">
         <img
           class="profile-image"
-          src="assets/Wavy Buddies - Avatar.png"
+          src="assets/linkedin-modified.png"
           alt=""
         />
         <h1>Hi I'm Tommaso</h1>
@@ -170,8 +168,7 @@
             </div>
 
             <div class="project-link">
-              <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://github.com/LobsterRavioli/manga-up" target="_blank"><i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
@@ -185,7 +182,6 @@
             </div>
             <div class="project-link">
               <a href="https://github.com/xDaryamo/BreastCancerPrediction" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="#" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -200,7 +196,6 @@
 
             <div class="project-link">
               <a href="https://github.com/LobsterRavioli/AmandiGioielli" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="https://github.com/LobsterRavioli/AmandiGioielli" target="_blank"><i class="fas fa-globe"></i></a>
             </div>
           </div>
         </div>
@@ -214,8 +209,7 @@
             </div>
 
             <div class="project-link">
-              <a href="https://lobsterravioli.github.io/thesis-project/" target="_blank"><i class="fab fa-github"></i></a>
-              <a href="https://lobsterravioli.github.io/thesis-project/" target="_blank"><i class="fas fa-globe"></i></a>
+              <a href="https://lobsterravioli.github.io/thesis-project/" target="_blank"><i class="fas fa-globe"></i></a
             </div>
           </div>
         </div>
