changing default logo

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           <!-- Navbar links -->
           <ul class="nav-menu">
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
-            <li><a class="nav-link" href="#">CONTACT</a></li>
-            <li><a class="nav-link" href="#">BlOG</a></li>
+            <li><a class="nav-link" href="https://drive.google.com/file/d/1YLENDAdM5SnRJJQPIFkDTnBK4SYr5QB_/view?usp=drive_link">Curriculum Vitae</a></li>
+            <li><a class="nav-link" href="#footer">Contacts</a></li>
             <li>
               <a
                 class="nav-link btn btn-primary"
@@ -134,15 +134,15 @@
         <h1>Hi I'm Tommaso</h1>
 
         <div class="content-text">
-          <h2>Debugging is my cardio. </h2>
+          <h2>I'm a Computer Scientist enthusiast. </h2>
           <h2></h2>
 
           <p>
-            Newly minted graduate in Computer Science, I'm a software engineering aficionado with a keen eye for architectural design. Driven by curiosity, I thrive on transforming complex problems into elegant digital solutions.
+            For me, computer science is more than a discipline; it's a way of thinking. Passionate about algorithms and data structures, I am a computer science student who loves to tackle and solve complex problems, turning them into efficient and high-performance code. My goal is to use my passion and curiosity to make a difference in the world of software.
           </p>
         </div>
         <a
-          href="https://github.com/CommunityPro/portfolio-html"
+          href="https://www.linkedin.com/in/tommaso-sorrentino99/"
           class="btn btn-secondary"
           target="_blank"
           >Connect With Me</a
@@ -220,30 +220,22 @@
       ></a>
     </section>
 
-    <footer id="footer">
+    <footer id="footer" >
       <div class="container">
         <a href="mailto:tommasosorrentino58@gmail.com">tommasosorrentino58@gmail.com</a>
+        <p>+39 331 459 1564 </p>
         <!-- Social links -->
         <div class="social">
           <a href="https://www.facebook.com/tommaso.sorrentino.75" target="_blank"
             ><img src="./assets/facebook-icon.svg" alt="Facebook"
           /></a>
-          <a href="#" target="_blank"><img src="./assets/twitter-icon.svg" alt="Twitter" /></a>
+
           <a href="https://www.linkedin.com/in/tommaso-sorrentino-0081472a1" target="_blank"
             ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
           /></a>
           <a href="https://github.com/LobsterRavioli" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
-          <a href="#" target="_blank"
-            ><img src="./assets/hashnode-icon.svg" alt="Hashnode"
-          /></a>
-        </div>
-        <!-- Attribution -->
-        <div class="attribution">
-          <a
-            href="https://github.com/CommunityPro/portfolio-html"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
+
+
           </a>
         </div>
       </div>
