changing default logo

--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
           <!-- Navbar links -->
           <ul class="nav-menu">
             <li><a class="nav-link" href="#projects">PROJECTS</a></li>
-            <li><a class="nav-link" href="https://drive.google.com/file/d/1YLENDAdM5SnRJJQPIFkDTnBK4SYr5QB_/view?usp=drive_link">Curriculum Vitae</a></li>
             <li><a class="nav-link" href="#footer">Contacts</a></li>
             <li>
               <a
                 class="nav-link btn btn-primary"
-                href="https://github.com/CommunityPro/portfolio-html"
+                href="https://drive.google.com/file/d/1YLENDAdM5SnRJJQPIFkDTnBK4SYr5QB_/view?usp=drive_link"
                 >RESUME <i class="fas fa-arrow-right"></i
               ></a>
             </li>
@@ -194,7 +193,6 @@
             ><img src="./assets/linkedin-icon.svg" alt="Linkedin"
           /></a>
           <a href="https://github.com/LobsterRavioli" target="_blank"><img src="./assets/github-icon.svg" alt="GitHub" /></a>
-
 
           </a>
         </div>
