--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h1>Hi I'm Tommaso</h1>
 
         <div class="content-text">
-          <h2>I'm a Computer Scientist enthusiast. </h2>
+          <h2>I'm a Computer Science enthusiast. </h2>
           <h2></h2>
 
           <p>
